style fix to prevent chat input covering up chat body

--- a/src/modules/chat/styles.scss
+++ b/src/modules/chat/styles.scss
@@ -55,6 +55,7 @@
   max-height: 70vh;
   display: flex;
   flex-direction: column-reverse;
+  padding-bottom: 35px;
 }
 
 .chat-input {
